<resources>
    <string name="app_name">WeMeet</string>
    <string name="button1">Bottone di prova</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="frase_benvenuto">Scopri gli eventi intorno a te e vivi nuove esperienze: svago, musica, sport e molto altro.</string>
    <string name="frase_benvenuto2">Ti aspettiamo!</string>
    <string name="accedi">Accedi</string>
    <string name="register">Registrati</string>
    <string name="login">Login</string>
    <string name="frase_login">Accedi e non perdere gli eventi più emozionanti vicino a te!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="or">or</string>
    <string name="or_withGoogle">Login with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="confermapassword">Conferma password</string>
    <string name="crea_account">Crea account</string>
    <string name="arrowleft">arrow_left</string>
    <string name="frase_signup">Registrati per non perdere nessun evento!</string>
    <string name="verification">Per favore, verifica che sei tu!</string>
    <string name="verificaEmail">verificaEmail</string>
    <string name="codeSended">Codice di verifica inviato</string>
    <string name="codeSendedIntoYourEmail">"Abbiamo mandato il codice di verifica a "</string>
    <string name="emailSelected">example@gmail.com</string>
    <string name="Invia">Invia</string>
    <string name="NotReceivedCode">Non hai ricevuto il codice?</string>
    <string name="SendCodeAgain">Invia di nuovo</string>
    <string name="example_email_com">example@email.com</string>
    <string name="mario_1234">Mario!1234</string>
    <string name="rossi">Rossi</string>
    <string name="mario">Mario</string>
    <string name="username">Nome Cognome</string>
    <string name="frase_bio">Questa è la mia bio.....</string>
    <string name="EventiCuiPartecipo">Eventi a cui partecipo</string>
    <string name="modificaImmagineProfilo">Modifica immagine del profilo</string>
    <string name="settings">Impostazioni</string>
    <string name="il_mio_account">Il mio account</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="esciAccount">Esci</string>
    <string name="elimina_preferiti">Elimina Preferiti</string>
    <string name="modifica_nome">Cambio Nome</string>
    <string name="modifica_bio">Cambia Bio</string>
    <string name="posizione">Luogo</string>
    <string name="laTuaPoszione">La tua posizione</string>
    <string name="milano">Milano, MI</string>
    <string name="filtri">Filtri</string>
    <string name="cercahint">Cerca...</string>
    <string name="eventi_salvati">Eventi salvati</string>
    <string name="nome_utente">Nome utente</string>
    <string name="profilo_utente">Profilo Utente</string>
    <string name="salvati">Eventi salvati</string>
    <string name="i_tuoi_eventi">Cerca qui i tuoi eventi...</string>
    <string name="partecipazione_eventi1">Eventi a cui partecipa</string>
    <string name="partecipazione_eventi2">Eventi a cui partecipo</string>
    <string name="acquista">Acquista</string>
    <string name="posizione_evento">Posizione evento</string>
    <string name="location_senza_eguali">Una location senza eguali che vi lascerà senza parole...</string>
    <string name="info_evento">Informazioni sull’evento</string>
    <string name="gattopardo_milano">Gattopardo Milano</string>
    <string name="impostazioni">Impostazioni Profilo</string>
    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_events">There was an error retrieving events</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="immagine_evento">ImmagineEvento</string>
    <string name="informazioni_evento">Informazioni sull\'evento</string>
    <string name="Informazioni_evento_default">Una location senza eguali che vi lascerà senza parole e serate accompagnate dalle acrobazie strabilianti dei migliori artisti e performer, un mix inarrivabile che trovi solo al Gattopardo.</string>
    <string name="vedi_partecipanti">Vedi partecipanti</string>
    <string name="posizione_evento_default">Posizione Evento</string>
    <string name="icona_profilo">Icona Profilo</string>
    <string name="salva_modifiche">Salva modifiche</string>
    <string name="partecipanti">Partecipanti</string>
    <string name="popolari">I più popolari</string>
    <string name="no_internet">Nessuna connessione Internet</string>
    <string name="change_foto">Tocca l\'immagine per cambiarla</string>
    <string name="tema_giorno">Tema: Giorno</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="elimina_profilo">Elimina Profilo</string>
    <string name="eventi_vicini_a_te">Eventi vicini a te</string>
    <string name="sei_loggato_con">Sei loggato con:</string>
    <string name="posizione_default">Non disponibile</string>
    <string name="password_8_caratteri">La password deve contenere almeno 8 caratteri</string>
    <string name="back_button_description">arrowback</string>
    <string name="maps_description">mapsview</string>
    <string name="input_email">textinputemail</string>
    <string name="date_default">15 Dicembre 2024</string>
    <string name="milano_default">Milano</string>
    <string name="sei_loggato_con_email_example_com">Sei loggato con:\nemail@example.com</string>
    <string name="fuoco">fuoco</string>
    <string name="imagine_dragons_loom_world_tour">Imagine Dragons - LOOM World Tour</string>
    <string name="date_default_event">2025-05-27</string>
    <string name="location_default_event">Ippodromo SNAI La Maura</string>

</resources>