<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountVerificationActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textVerification"
        android:layout_marginStart="5dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/verification"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/verificaEmail"
        android:tint="@color/cardview_dark_background"
        tools:ignore="UseAppTint"
        app:srcCompat="@drawable/email"
        android:layout_marginTop="160dp"
        android:layout_marginStart="150dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/codeSended"
        android:layout_marginStart="85dp"
        android:layout_marginTop="270dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/codeSended"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/codeSendedIntoYourEmail"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/codeSendedIntoYourEmail"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/emailSelected"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="350dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/emailSelected"
        android:textSize="20sp"
        android:textColor="@color/blue"/>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Invia"
        android:layout_gravity="center"
        android:layout_marginTop="550dp"
        android:fontFamily="sans-serif-medium"
        app:backgroundTint="@color/red_primary"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="25sp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/NotReceivedCode"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="620dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/NotReceivedCode"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/sendCodeAgain"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="620dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/SendCodeAgain"
        android:textSize="17sp"
        android:textColor="@color/normal_red"/>


</RelativeLayout>