<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.welcome.SignUpActivity"
    android:background="@color/main_red">

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/arrowBackWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="@dimen/margin_default"
        app:iconTint="@color/white"
        app:iconSize="35dp"
        android:contentDescription="@string/login"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/crea_account"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/frase_signup"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/nome"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginEnd="@dimen/margin_default2"
            android:hint="@string/mario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextNome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/cognome"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginEnd="@dimen/margin_default2"
            android:hint="@string/rossi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextCognome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/email"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginEnd="@dimen/margin_default2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/example_email_com"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:endIconMode="password_toggle"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginEnd="@dimen/margin_default2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/mario_1234"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/confermapassword"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:endIconMode="password_toggle"
            android:layout_marginStart="@dimen/margin_default2"
            android:layout_marginEnd="@dimen/margin_default2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextConfermaPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/mario_1234"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/open_sans_bold"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/black" />

    </LinearLayout>

</LinearLayout>