<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary"
    android:orientation="vertical"
    tools:context=".WelcomeActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/LogoWemeet"
        android:layout_width="wrap_content"
        android:layout_height="425dp"
        app:srcCompat="@drawable/logowemeet"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_below="@id/LogoWemeet"
        android:background="@drawable/border" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benvenuto"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        android:textSize="40dp"
        android:textColor="@color/md_theme_onPrimary"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/FraseBenvenuto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="560dp"
        android:text="@string/frase_benvenuto"
        android:textColor="@color/md_theme_onPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/FraseBenvenuto2"
        android:layout_below="@id/FraseBenvenuto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/frase_benvenuto2"
        android:textColor="@color/md_theme_onPrimary"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:orientation="horizontal">


        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FraseBenvenuto2"
            android:layout_marginTop="720dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/accedi"
            android:textSize="30sp" />

        <View
            android:layout_width="@dimen/margin_default"
            android:layout_height="0dp" />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="720dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register"
            android:textSize="30sp" />
    </LinearLayout>


</RelativeLayout>

