<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/arrowBackSetting"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:contentDescription="@string/login"
        app:icon="@drawable/arrow_left"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/impostazioni"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="80dp"
        android:layout_gravity="center"
        app:cardElevation="12dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/profile_default"
            android:contentDescription="@string/username"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_foto"
        android:textSize="16sp"
        android:textColor="@color/text_subtitle_event"
        android:fontFamily="@font/open_sans_medium"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        android:hint="@string/modifica_biografia"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/text_subtitle_event"
        android:fontFamily="@font/open_sans"
        android:maxLength="100"
        android:singleLine="true"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottone_tema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/tema_giorno"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginTop="60dp"
        app:cornerRadius="28dp"
        app:icon="@drawable/moon"
        app:iconTint="@color/white"
        android:backgroundTint="@color/black" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottone_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/esciAccount"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginTop="32dp"
        app:cornerRadius="28dp"
        app:icon="@drawable/esci"
        app:iconTint="@android:color/white"
        android:backgroundTint="@color/red_button_esci"/>

</LinearLayout>